--- a/website/news.html
+++ b/website/news.html
@@ -32,6 +32,14 @@ document.addEventListener('DOMContentLoaded', () => {
   const DECEMBER = 11;
   const items = [
     {
+      date: new Date(2023, NOVEMBER, 13),
+      text: 'Service Weaver at <a href="https://golab.io">GoLab</a> in Florence. Join us for a <a href="https://golab.io/talks/modern-cloud-development-with-service-weaver">workshop</a> on November 19th, or come listen to our <a href="https://golab.io/talks/towards-modern-development-of-cloud-applications">talk</a> on November 21st.',
+    },
+    {
+      date: new Date(2023, NOVEMBER, 9),
+      text: 'Now you can deploy Service Weaver applications in any Kubernetes environment. Read the blog post <a href="./blog/kubernetes.html">here</a>.',
+    },
+    {
       date: new Date(2023, OCTOBER, 16),
       text: 'Service Weaver talk at <a href="https://devfest2023.gdgnantes.com/en/sessions/towards_modern_development_of_cloud_applications/">DevFest Nantes</a> on October 20th. Excited to have <a href="https://cloud.google.com/developers/advocates/valentin-deleplace">Valentin</a> talk about Service Weaver.',
     },
