DevFest Taichung news

--- a/website/news.html
+++ b/website/news.html
@@ -32,6 +32,10 @@ document.addEventListener('DOMContentLoaded', () => {
   const DECEMBER = 11;
   const items = [
     {
+      date: new Date(2023, DECEMBER, 13),
+      text: '<a href="https://kaichu.io/about/">Kai-Chu</a> talked about Service Weaver at <a href="https://twitter.com/GDGTaichung/status/1731666673894375794/photo/1">DevFest Taichung</a>. Thanks Kai-Chu.',
+    },
+    {
       date: new Date(2023, NOVEMBER, 13),
       text: 'Service Weaver at <a href="https://golab.io">GoLab</a> in Florence. Join us for a <a href="https://golab.io/talks/modern-cloud-development-with-service-weaver">workshop</a> on November 19th, or come listen to our <a href="https://golab.io/talks/towards-modern-development-of-cloud-applications">talk</a> on November 21st.',
     },
