--- a/website/news.html
+++ b/website/news.html
@@ -32,6 +32,10 @@ document.addEventListener('DOMContentLoaded', () => {
   const DECEMBER = 11;
   const items = [
     {
+      date: new Date(2023, DECEMBER, 19),
+      text: 'We added documentation on how to use the <a href="./docs.html#ssh-experimental">SSH</a> deployer to deploy Service Weaver applications across a set of machines reachable via ssh. Note that the deployer is missing some features; we welcome contributions :).',
+    },
+    {
       date: new Date(2023, DECEMBER, 13),
       text: '<a href="https://kaichu.io/about/">Kai-Chu</a> talked about Service Weaver at <a href="https://twitter.com/GDGTaichung/status/1731666673894375794/photo/1">DevFest Taichung</a>. Thanks Kai-Chu.',
     },
