Add reddit and hacker news links to news.

--- a/website/news.html
+++ b/website/news.html
@@ -32,6 +32,10 @@ document.addEventListener('DOMContentLoaded', () => {
   const DECEMBER = 11;
   const items = [
     {
+      date: new Date(2024, JANUARY, 16),
+      text: 'Our <a href="./assets/docs/hotos23_vision_paper.pdf">vision</a> paper on modern development of cloud applications has led to interesting discussions on <a href="https://www.reddit.com/r/programming/comments/1962avu/a_googles_proposal_for_an_alternative_to/">Reddit</a> and <a href="https://news.ycombinator.com/item?id=38988238">Hacker News</a>.',
+    },
+    {
       date: new Date(2023, DECEMBER, 19),
       text: 'We added documentation on how to use the <a href="./docs.html#ssh-experimental">SSH</a> deployer to deploy Service Weaver applications across a set of machines reachable via ssh. Note that the deployer is missing some features; we welcome contributions :).',
     },
