Add blog post on improving cloud efficiency

--- a/website/news.html
+++ b/website/news.html
@@ -32,8 +32,16 @@ document.addEventListener('DOMContentLoaded', () => {
   const DECEMBER = 11;
   const items = [
     {
+      date: new Date(2024, FEBRUARY, 8),
+      text: 'New blog post on <a href="./blog/improve_cloud_efficiency.html">how to improve cloud efficiency with Service Weaver</a>. Stay tuned, more blog posts coming soon!',
+    },
+    {
+      date: new Date(2024, FEBRUARY, 1),
+      text: 'Added <a href="./docs.html#cloud-run">documentation</a> on how to run Service Weaver applications in a single container using <a href="https://cloud.google.com/run">Cloud Run</a>.',
+    },
+    {
       date: new Date(2024, JANUARY, 16),
-      text: 'Our <a href="./assets/docs/hotos23_vision_paper.pdf">vision</a> paper on modern development of cloud applications has led to interesting discussions on <a href="https://www.reddit.com/r/programming/comments/1962avu/a_googles_proposal_for_an_alternative_to/">Reddit</a> and <a href="https://news.ycombinator.com/item?id=38988238">Hacker News</a>.',
+      text: 'Our <a href="https://dl.acm.org/doi/10.1145/3593856.3595909">vision</a> paper on modern development of cloud applications has led to interesting discussions on <a href="https://www.reddit.com/r/programming/comments/1962avu/a_googles_proposal_for_an_alternative_to/">Reddit</a> and <a href="https://news.ycombinator.com/item?id=38988238">Hacker News</a>.',
     },
     {
       date: new Date(2023, DECEMBER, 19),
