Added news entry for new testing blog.

--- a/website/news.html
+++ b/website/news.html
@@ -32,6 +32,10 @@ document.addEventListener('DOMContentLoaded', () => {
   const DECEMBER = 11;
   const items = [
     {
+      date: new Date(2024, FEBRUARY, 16),
+      text: 'New blog post on <a href="./blog/testing.html">unit testing, integration testing, and randomized testing with Service Weaver</a>.',
+    },
+    {
       date: new Date(2024, FEBRUARY, 8),
       text: 'New blog post on <a href="./blog/improve_cloud_efficiency.html">how to improve cloud efficiency with Service Weaver</a>. Stay tuned, more blog posts coming soon!',
     },
