--- a/website/index.html
+++ b/website/index.html
@@ -148,7 +148,7 @@ binary = "./example"
 
 [gke]
 regions = ["us-west1", "us-east1"]
-listeners.example = {public_hostname = "example.com"},
+listeners.example = {is_public = true, hostname = "example.com"},
 </markdown>
     </div>
   </div>
