--- a/website/news.html
+++ b/website/news.html
@@ -32,6 +32,18 @@ document.addEventListener('DOMContentLoaded', () => {
   const DECEMBER = 11;
   const items = [
     {
+      date: new Date(2024, APRIL, 23),
+      text: 'Honored to have held a Service Weaver workshop at <a href="https://jp.mercari.com/en">Mercari</a>.',
+    },
+    {
+      date: new Date(2024, APRIL, 19),
+      text: 'We had a great time talking about Service Weaver at <a href="https://xero.com">Xero</a>.',
+    },
+    {
+      date: new Date(2024, MARCH, 15),
+      text: '<a href="https://www.linkedin.com/in/sabdelfettah/">Abdel</a> talks about Service Weaver at <a href="https://devoxx.gr/talk/?id=3859">Devoxx Greece</a>. Thanks, Abdel!'
+    },
+    {
       date: new Date(2024, FEBRUARY, 16),
       text: 'New blog post on <a href="./blog/testing.html">unit testing, integration testing, and randomized testing with Service Weaver</a>.',
     },
