--- a/website/workshops.html
+++ b/website/workshops.html
@@ -99,6 +99,11 @@
         location: 'Florence',
         register: '<a href="https://golab.io/talks/modern-cloud-development-with-service-weaver">Golab</a>',
       },
+      {
+        date: new Date(2024, APRIL, 22),
+        location: 'Online',
+        register: '<a href="https://jp.mercari.com/en">Mercari</a>',
+      },
     ];
 
     const table = document.getElementById('workshops');
