Add DevDays news

--- a/website/news.html
+++ b/website/news.html
@@ -32,6 +32,10 @@ document.addEventListener('DOMContentLoaded', () => {
   const DECEMBER = 11;
   const items = [
     {
+      date: new Date(2024, MAY, 10),
+      text: '<a href="https://www.linkedin.com/in/sabdelfettah/">Abdel</a> will give another talk about Service Weaver at <a href="https://tinyurl.com/3mcd8yrz">DevDays Europe</a>. Thanks, Abdel!',
+    },
+    {
       date: new Date(2024, APRIL, 23),
       text: 'Honored to have held a Service Weaver workshop at <a href="https://jp.mercari.com/en">Mercari</a>.',
     },
