--- a/website/index.html
+++ b/website/index.html
@@ -27,6 +27,13 @@
   <a href="docs.html">Read the Docs</a>
 </div>
 
+<div class="announcement-banner">
+  <p>We regret to announce that, effective <b>December 5, 2024</b>, we will no longer be able to
+    continue active development on the Service Weaver open-source framework. For more details, click
+    <a href="https://github.com/ServiceWeaver/weaver/blob/main/README.md">here.</a>
+  </p>
+</div>
+
 <div class="intro-row">
   <div class="intro-col">
     <h1>Step 1: Split Your Application Into Components</h1>
