--- a/website/index.html
+++ b/website/index.html
@@ -28,8 +28,8 @@
 </div>
 
 <div class="announcement-banner">
-  <p>We regret to announce that, effective <b>December 5, 2024</b>, we will no longer be able to
-    continue active development on the Service Weaver open-source framework. For more details, click
+  <p>We regret to announce that, effective <b>December 5, 2024</b>, we will no longer continue active
+    development on the Service Weaver open-source framework. For more details, click
     <a href="https://github.com/ServiceWeaver/weaver/blob/main/README.md">here.</a>
   </p>
 </div>
