Updated style for the turndown message

--- a/website/index.html
+++ b/website/index.html
@@ -14,6 +14,13 @@
  limitations under the License.
 -->
 
+<div class="announcement-banner">
+  <p>We regret to announce that, effective <b>December 5, 2024</b>, we will no longer continue active
+    development on the Service Weaver open-source framework. For more details, click
+    <a href="https://github.com/ServiceWeaver/weaver/blob/main/README.md">here.</a>
+  </p>
+</div>
+
 <div id="serviceweaver-jumbotron">
   <h1>
     Write your application as a <strong>modular binary</strong>. Deploy it
